--- a/src/main/webapp/student.html
+++ b/src/main/webapp/student.html
@@ -8,11 +8,10 @@
 
         <title>학생명부 </title>
 
-        <!-- Jquery -->
-        <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <!-- axios -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 
         <!-- bootStrap -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -24,14 +23,14 @@
         <link rel="stylesheet" href="https://uicdn.toast.com/tui-grid/latest/tui-grid.css" />
         <script src="https://uicdn.toast.com/tui-grid/latest/tui-grid.js"></script>
 
-        <!-- axios -->
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!-- custom js -->
+        <script src="/js/common.js"></script>
 
     </head>
     <body>
         <div class="card">
             <div class="card-header">
-              <h2>학생명부 입축력 예제</h2>
+              <h2>Vanillax Grid Example (학생명부 입축력)</h2>
             </div>
               <div class="card-body">
                 <div class="form-group row">
@@ -56,6 +55,5 @@
             </div>
         </div>
     </body>
-<script src="js/gridDtls.js"></script>
-<script src="js/indexControl.js"></script>
+<script src="js/student.js"></script>
 </html>
